@@ -32,6 +32,9 @@ Breaking Changes:
 - removed command: decref_value
 - removed command: incref_value
 - removed command: add_value
+- removed command: add_data
+- removed command: delete_data
+- removed command: get_data
 
 Updates:
 - imgui: updated to v1.81
